<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#373737">

    <Button
        android:id="@+id/loginPageLoginButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="150dp"
        android:background="@drawable/ic_launcher_background"
        android:fontFamily="sans-serif-medium"
        android:text="@string/loginpage_loginbutton"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FFFFFFFF"
        android:textColorHighlight="#E91E63"
        android:textColorLink="#0022FE"
        android:textSize="18sp"
        app:cornerRadius="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="#FFFFFF" />

    <ProgressBar
        android:id="@+id/loginPageProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginPagePasswordLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@color/gray"
        app:layout_constraintBottom_toTopOf="@+id/loginPageLoginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:passwordToggleEnabled="true">


        <EditText
            android:id="@+id/loginPagePasswordEditText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="password"
            android:background="@color/gray"
            android:ems="10"
            android:hint="@string/loginpage_passwordinsert"
            android:inputType="textPassword" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginPageEmailLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@color/gray"
        app:layout_constraintBottom_toTopOf="@+id/loginPagePasswordLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <EditText
            android:id="@+id/loginPageEmailEditText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="emailAddress"
            android:background="@color/gray"
            android:ems="10"
            android:hint="@string/loginpage_emailinsert"
            android:inputType="textEmailAddress" />


    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/frontImageDescription"
        app:layout_constraintBottom_toTopOf="@+id/loginPageEmailLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

</androidx.constraintlayout.widget.ConstraintLayout>